--- a/src/nfa_dfa.ipynb
+++ b/src/nfa_dfa.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 52,
       "metadata": {
         "id": "wCgGddu0aq8Z"
       },
@@ -12,7 +12,59 @@
         "from collections import deque\n",
         "from dataclasses import dataclass\n",
         "from typing import List\n",
-        "import graphviz"
+        "import graphviz\n",
+        "import string\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Visiualizing Graphs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 48,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "def draw(json_format, output_file):\n",
+        "    dot = graphviz.Digraph(format=\"png\")\n",
+        "\n",
+        "    # Extract the starting state\n",
+        "    start_state = json_format[\"startingState\"]\n",
+        "\n",
+        "    ##color the starting state\n",
+        "    dot.node(start_state, shape=\"circle\", style=\"filled\", fillcolor=\"lightgrey\")\n",
+        "    ##add edge to starting state from no where\n",
+        "    dot.node(\"\", shape=\"point\")  # Add an invisible starting point\n",
+        "    dot.edge(\"\", start_state, label=\"start\")\n",
+        "\n",
+        "\n",
+        "    for state, transitions in json_format.items():\n",
+        "        if state == \"startingState\":\n",
+        "            continue\n",
+        "        # Mark accepting (terminating) states differently\n",
+        "        if transitions[\"isTerminatingState\"]:\n",
+        "            dot.node(state, shape=\"doublecircle\")\n",
+        "        else:\n",
+        "            dot.node(state, shape=\"circle\")\n",
+        "\n",
+        "        if(output_file==\"nfa_graph\"):\n",
+        "          # Add transitions\n",
+        "          for symbol, target_state in transitions.items():\n",
+        "              if symbol != \"isTerminatingState\":  # Avoid unnecessary key\n",
+        "                  for target in target_state:\n",
+        "                      dot.edge(state, target, label=symbol)\n",
+        "        else:\n",
+        "          # Add transitions\n",
+        "          for symbol, target_state in transitions.items():\n",
+        "              if symbol != \"isTerminatingState\":  # Avoid unnecessary key\n",
+        "                      dot.edge(state, target_state, label=symbol)\n",
+        "    # Render and save the graph\n",
+        "    dot.render(output_file)"
       ]
     },
     {
@@ -26,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
         "id": "21Sj5mZDgUcI"
       },
@@ -66,15 +118,12 @@
         "        from_:State\n",
         "        to:State\n",
         "        label:str\n",
-        "\n",
         "@dataclass\n",
         "class NFA_node:\n",
         "    start:int\n",
         "    end:int\n",
         "    edges:list[Edge]\n",
-        "    states:list[int]\n",
-        "\n",
-        "     \n",
+        "    states:list[int]     \n",
         "class NFA:\n",
         "    def __init__(self, regex):\n",
         "        try:\n",
@@ -86,7 +135,6 @@
         "                return\n",
         "\n",
         "        tokens=self.tokenize(regex)\n",
-        "        tokens=self.handle_dot(tokens) #handle the dot operator\n",
         "        tokens=self.add_concatenation(tokens) #& operator\n",
         "        \n",
         "        postfix=self.regex_to_postfix(tokens)\n",
@@ -94,23 +142,7 @@
         "        nfa=self.build_nfa(postfix)\n",
         "        nfa_json=self.construct_json(nfa)\n",
         "        draw(nfa_json,\"nfa_graph\")\n",
-        "    def handle_dot(self,tokens):\n",
-        "        \"\"\"\n",
-        "        Handle the dot operator in the regex\n",
-        "        \"\"\"\n",
-        "        new_tokens=[]\n",
-        "        i=0\n",
-        "        string=\"[a-zA-Z0-9]\"\n",
-        "        while i < len(tokens):\n",
-        "            token=tokens[i]\n",
-        "            if token==\".\":\n",
-        "                for char in string:\n",
-        "                    new_tokens.append(char)\n",
-        "            else:\n",
-        "                new_tokens.append(token)\n",
-        "            i+=1\n",
-        "        return new_tokens\n",
-        "    \n",
+        "\n",
         "    def construct_json(self,nfa):\n",
         "        nfa_json={}\n",
         "        nfa_json[\"startingState\"] = \"S\"+str(nfa.start.index)\n",
@@ -135,8 +167,7 @@
         "    def build_nfa(self, postfix):\n",
         "        stack=[]\n",
         "        for token in postfix:\n",
-        "            if token.isalnum():\n",
-        "               \n",
+        "            if len(token)>1 or token.isalnum() or token in \".\":\n",
         "                stack.append(self.construct_nfa( token))\n",
         "            elif token==\"*\":\n",
         "                stack.append(self.kleene_closure(stack.pop()))\n",
@@ -220,9 +251,6 @@
         "        nfa.start = start\n",
         "        nfa.end = end\n",
         "        return nfa\n",
-        "\n",
-        "  \n",
-        "\n",
         "    def add_concatenation(self,tokens):\n",
         "        new_tokens=[]\n",
         "        i=0\n",
@@ -236,7 +264,7 @@
         "                continue\n",
         "            new_tokens.append(token)\n",
         "            if token.isalnum() or token in \")]?+.*\": #add concatenation operator\n",
-        "                if i+1<len(tokens) and (tokens[i+1].isalnum() or tokens[i+1]==\"(\" or tokens[i+1]==\"[\"):\n",
+        "                if i+1<len(tokens) and (tokens[i+1].isalnum() or tokens[i+1]==\".\" or tokens[i+1]==\"(\" or tokens[i+1]==\"[\"):\n",
         "                    new_tokens.append(\"&\")\n",
         "            i+=1\n",
         "        return new_tokens\n",
@@ -244,19 +272,15 @@
         "    def is_valid_regex(self,regex):\n",
         "        stack = []\n",
         "        prev_char = None\n",
-        "        escaped=False\n",
         "        bracket_content = \"\"\n",
         "        in_bracket = False\n",
         "\n",
         "\n",
         "        for i, char in enumerate(regex):\n",
         "            ##check that char belongs to the valid set of characters\n",
-        "            if not char.isalnum() and char not in \".-()|*+?[]\\\\\":\n",
+        "            if not char.isalnum() and char not in \".-()|*+?[]\":\n",
         "                return False\n",
-        "            if escaped:  \n",
-        "                # Allow any character after `\\` (like `\\[` or `\\+`)\n",
-        "                escaped = False  \n",
-        "                continue  \n",
+        "           \n",
         "            if char == '(':\n",
         "                stack.append('(')\n",
         "            elif char == ')':\n",
@@ -287,16 +311,13 @@
         "            # Ensure `*`, `+`, `?` are not first characters\n",
         "            elif char in \"*+?\" and (i == 0 or prev_char in \"(|\"):\n",
         "                return False\n",
-        "\n",
+        "            elif char==\".\" and (prev_char and prev_char in \"(|\"):\n",
+        "                return False\n",
         "            # Ensure `|` is not at start or end\n",
         "            elif char == \"|\" and (i == 0 or i == len(regex) - 1 or regex[i - 1] in \"(|\"):\n",
         "                return False\n",
         "            \n",
-        "            # Ensure `\\` is followed by something\n",
-        "            elif char == \"\\\\\":\n",
-        "                escaped = True\n",
-        "                if i == len(regex) - 1:  # Last character cannot be `\\`\n",
-        "                    return False\n",
+        "        \n",
         "            \n",
         "            prev_char = char\n",
         "\n",
@@ -313,7 +334,7 @@
         "        parts = bracket_content.split('-')\n",
         "        i = 0\n",
         "        while i < len(bracket_content):\n",
-        "            if (not bracket_content[i].isalnum() ):\n",
+        "            if (not bracket_content[i].isalnum() and not bracket_content[i] == \".\"):\n",
         "\n",
         "                return False\n",
         "            if i + 2 < len(bracket_content) and bracket_content[i + 1] == '-':\n",
@@ -332,18 +353,8 @@
         "    \n",
         "        \"\"\"\n",
         "        tokens=[]\n",
-        "        escaped=False\n",
         "        for i,char in enumerate(regex):\n",
-        "            if escaped:\n",
-        "                escaped=False\n",
         "                tokens.append(char)\n",
-        "                continue\n",
-        "            if char==\"\\\\\":\n",
-        "                escaped=True\n",
-        "                continue\n",
-        "\n",
-        "            tokens.append(char)\n",
-        "\n",
         "        return tokens\n",
         "\n",
         "    def regex_to_postfix(self,tokens):\n",
@@ -356,7 +367,6 @@
         "        i =0\n",
         "        while i <  (len(tokens)):\n",
         "            token=tokens[i]\n",
-        "            \n",
         "            i+=1\n",
         "            if token.isalnum():\n",
         "                postfix.append(token)\n",
@@ -370,9 +380,10 @@
         "                expanded_chars = []\n",
         "                while i < len(tokens) and tokens[i] != \"]\":\n",
         "                    if i + 2 < len(tokens) and tokens[i + 1] == \"-\":  # Handle ranges like a-c\n",
-        "                        start, end = tokens[i], tokens[i + 2]\n",
+        "                        # start, end = tokens[i], tokens[i + 2]\n",
         "                      \n",
-        "                        expanded_chars.extend(chr(j) for j in range(ord(start), ord(end) + 1))\n",
+        "                        # expanded_chars.extend(chr(j) for j in range(ord(start), ord(end) + 1))\n",
+        "                        expanded_chars.append(\"\".join(tokens[i:i+3]))\n",
         "                        i += 3  # Skip `start-end`\n",
         "                    else:\n",
         "                        expanded_chars.append(tokens[i])\n",
@@ -408,7 +419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "HtN6mjNnli51"
       },
@@ -416,6 +427,7 @@
       "source": [
         "class Minimized_DFA:\n",
         "    def __init__(self, nfa_json):\n",
+        "        nfa_json=adjust_json(nfa_json)\n",
         "        dfa=self.nfa_to_dfa(nfa_json)\n",
         "        minimized_dfa=self.minimize_dfa(dfa)\n",
         "        with open(\"minimized_dfa.json\", \"w\", encoding=\"utf-8\") as file:\n",
@@ -517,74 +529,36 @@
         "                    minimized_dfa[new_state][input] = state_map[next_state]\n",
         "\n",
         "        return minimized_dfa\n",
+        "    def expand_ranges(transitions):\n",
+        "        expanded = {}\n",
+        "        for symbol, next_states in transitions.items():\n",
+        "            if \"-\" in symbol and len(symbol) == 3:\n",
+        "                start, end = symbol.split(\"-\")\n",
+        "                if start in string.printable and end in string.printable:\n",
+        "                    for char in range(ord(start), ord(end) + 1):\n",
+        "                        expanded[chr(char)] = next_states\n",
+        "            else:\n",
+        "                expanded[symbol] = next_states\n",
+        "        return expanded\n",
         "\n",
-        "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bIAi0-S4hSwX"
-      },
-      "source": [
-        "# Visiualizing Graphs"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "id": "c-RwM5dpgw3r"
-      },
-      "outputs": [],
-      "source": [
-        "\n",
-        "def draw(json_format, output_file):\n",
-        "    dot = graphviz.Digraph(format=\"png\")\n",
-        "\n",
-        "    # Extract the starting state\n",
-        "    start_state = json_format[\"startingState\"]\n",
-        "\n",
-        "    ##color the starting state\n",
-        "    dot.node(start_state, shape=\"circle\", style=\"filled\", fillcolor=\"lightgrey\")\n",
-        "    ##add edge to starting state from no where\n",
-        "    dot.node(\"\", shape=\"point\")  # Add an invisible starting point\n",
-        "    dot.edge(\"\", start_state, label=\"start\")\n",
-        "\n",
-        "\n",
-        "    for state, transitions in json_format.items():\n",
-        "        if state == \"startingState\":\n",
-        "            continue\n",
-        "        # Mark accepting (terminating) states differently\n",
-        "        if transitions[\"isTerminatingState\"]:\n",
-        "            dot.node(state, shape=\"doublecircle\")\n",
-        "        else:\n",
-        "            dot.node(state, shape=\"circle\")\n",
-        "\n",
-        "        if(output_file==\"nfa_graph\"):\n",
-        "          # Add transitions\n",
-        "          for symbol, target_state in transitions.items():\n",
-        "              if symbol != \"isTerminatingState\":  # Avoid unnecessary key\n",
-        "                  for target in target_state:\n",
-        "                      dot.edge(state, target, label=symbol)\n",
-        "        else:\n",
-        "          # Add transitions\n",
-        "          for symbol, target_state in transitions.items():\n",
-        "              if symbol != \"isTerminatingState\":  # Avoid unnecessary key\n",
-        "                      dot.edge(state, target_state, label=symbol)\n",
-        "\n",
-        "\n",
-        "\n",
-        "    # Render and save the graph\n",
-        "    dot.render(output_file)\n",
-        "\n",
-        "\n"
+        "    def adjust_json(nfa_json):\n",
+        "        with open(nfa_json, \"r\", encoding=\"utf-8\") as file:\n",
+        "            nfa = json.load(file)\n",
+        "        \n",
+        "        adjusted_nfa = {}\n",
+        "        for state, state_info in nfa.items():\n",
+        "            if state != \"startingState\":\n",
+        "                adjusted_nfa[state] = {\"isTerminatingState\": state_info[\"isTerminatingState\"]}\n",
+        "                transitions = {k: v for k, v in state_info.items() if k != \"isTerminatingState\"}\n",
+        "                adjusted_nfa[state].update(expand_ranges(transitions))\n",
+        "        \n",
+        "        adjusted_nfa[\"startingState\"] = nfa[\"startingState\"]\n",
+        "        return adjusted_nfa\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -601,28 +575,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['a', 'b', '&', 'c', '&', 'd', '&']\n"
+            "['a', '*', 'b', '*', '&', 'a-b', '*', '&']\n"
           ]
         }
       ],
       "source": [
-        "regex=\"abcd\"\n",
+        "regex=\"(a*b*)([a-b]*)\"\n",
         "main(regex)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
